Fix 3 icon box spacing issue and change order of top icons

--- a/wp-content/themes/conall-child/src/scss/pages/pages.scss
+++ b/wp-content/themes/conall-child/src/scss/pages/pages.scss
@@ -35,7 +35,11 @@
     }
   }
 }
-
+#icon-row3 {
+  .edgtf-section .edgtf-full-section-inner {
+    max-width: 1100px;
+  }
+}
 #open-positions-cta {
   width: 329px;
   position: absolute;
@@ -77,25 +81,25 @@
 #careers-paylocity-row {
   h2.careers-blue-headings  {
     font-family: "Raleway", sans-serif;
-    font-weight: bold;
+    font-weight: 600;
     font-size: 28px;
-    line-height: 1.5em;
+    line-height: 1.2em;
     color: #2B71B7;
     text-transform: uppercase;
   }
   p.careers-paragraph {
     font-family: "Raleway", sans-serif;
-    font-size: 22px;
-    line-height: 2rem;
-    color: #333333;
-    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    color: #2f2f2f;
+    font-weight: 500;
     margin-top: 20px;
   }
   p.careers-paragraph.bold {
     font-size: 22px;
     font-weight: bold;
     line-height: 2rem;
-    color: #333333;
+    color: #2f2f2f;
     margin-top: 20px;
   }
 }
@@ -140,7 +144,7 @@
   }
   .edgtf-iwt-content-holder {
     display: inline-flex;
-    width: 60%;
+    width: 45%;
     padding: 0 !important;
     flex-direction: column;
     justify-content: center;
@@ -151,27 +155,31 @@
   }
   h5 {
     color: #fff;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 28px;
     line-height: 1.5em;
-    letter-spacing: -0.15px;
+    letter-spacing: 0;
   }
   p {
     color: #fff;
-    font-weight: 500;
-    font-size: 22px;
+    font-weight: 400;
+    font-size: 18px;
     line-height: 2rem;
-    width: 82%;
+  }
+  .career-icon2 {
+    p {
+      width: 65%;
+    }
   }
 }
 #bottombox1 {
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 #bottombox2 {
   justify-content: center;
 }
 #bottombox3 {
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 #bottombox3 {
   .edgtf-iwt-content-holder {
@@ -221,11 +229,11 @@
   }
   h5 {
     color: #fff;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 28px;
-    line-height: 1.5em;
-    letter-spacing: -0.15px;
+    line-height: 1.2em;
     text-align: center;
+    letter-spacing: 0;
   }
 }
 #grey-background-row {
@@ -259,7 +267,7 @@
   }
   p.eoe-copy {
     font-family: "Raleway", sans-serif;
-    font-size: 22px;
+    font-size: 18px;
     line-height: 2rem;
     color: #8D8D8D;
     font-style: italic;
@@ -771,7 +779,7 @@ iframe.paylocity-iframe {
   }
   .icon-topbox { 
     p {
-      width: 95%;
+      width: 90%;
     }
   }
 }
@@ -793,7 +801,7 @@ iframe.paylocity-iframe {
       line-height: 28px;
     }
     p {
-      font-size: 20px;
+      font-size: 18px;
       line-height: 28px;
     }
   }
@@ -804,6 +812,7 @@ iframe.paylocity-iframe {
     h5 {
       font-size: 25px;
       line-height: 28px;
+      letter-spacing: 0;
     }
     .edgtf-iwt-icon-holder {
       img {
@@ -822,7 +831,7 @@ iframe.paylocity-iframe {
     width: 768px;
   }
   .edgtf-iwt:not(.edgtf-iwt-left-from-title):not(.edgtf-iwt-icon-top-with-separator) .edgtf-iwt-title-holder {
-    margin-bottom: 8px !important;
+    margin-bottom: 2px !important;
   }
   .icon-topbox {
     .edgtf-iwt-icon-holder {
@@ -831,12 +840,13 @@ iframe.paylocity-iframe {
       }
     }
     h5 {
-      font-size: 20px;
-      line-height: 25px;
+      font-size: 25px;
+      line-height: 28px;
+      letter-spacing: 0;
     }
     p {
       font-size: 16px;
-      line-height: 20px;
+      line-height: 22px;
       padding: 0;
       margin: 0;
       width: 88%;
@@ -853,22 +863,27 @@ iframe.paylocity-iframe {
       padding-top: 0;
     }
     h5 {
-      font-size: 20px;
-      line-height: 25px;
+      font-size: 25px;
+      line-height: 28px;
+      letter-spacing: 0;
     }
     .edgtf-iwt-icon-holder,
     .edgtf-iwt-content-holder {
       height: 50%;
       padding: 7%;
     }
+    .edgtf-iwt-content-holder {
+      width: 98%;
+    }
     .edgtf-iwt-icon-holder {
+      width: 88%;
       img {
-        max-width: 69%;
+        max-width: 50%;
       }
     }
   }
   #grey-background-row a {
-    font-size: 20px;
+    font-size: 18px;
 }
   #future-events-row {
 
@@ -949,11 +964,14 @@ iframe.paylocity-iframe {
     }
     p {
       width: 90%;
+      font-size: 15px;
+      line-height: 22px;
+      margin-top: 6px;
     }
   }
   .icon-bottombox {
     div.vc_column-inner {
-      min-height: 215px;
+      min-height: 250px;
     }
   }
   .edgtf-iwt.edgtf-iwt-icon-left {
@@ -971,7 +989,14 @@ iframe.paylocity-iframe {
   .icon-bottombox.vc_column_container {
     justify-content: center;
   }
-  #mission-statement,
+  #grey-background-row {
+    margin-top: 8px;
+  }
+  #bottombox3 .vc_column_container {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  /* #mission-statement,
   #core-values,
   #our-purpose,
   #what-we-offer,
@@ -991,7 +1016,7 @@ iframe.paylocity-iframe {
       line-height: 40px;
       margin-top: 15px;
     }
-  }
+  }*/
 }
 
 /*** Responsive Styles Tablet Only ***/
@@ -1004,12 +1029,22 @@ iframe.paylocity-iframe {
   .page-id-17194 .edgtf-grid-section .edgtf-section-inner {
     width: 600px;
   }
-  #grey-background-row a {
-    font-size: 16px;
-  }
   #grey-background-row {
     border-radius: 10px!important;
     min-height: 55px;
+    max-width: 600px;
+    margin-left: 0;
+  }
+  .icon-topbox {
+    p {
+      width: 93%;
+    }
+    .edgtf-iwt-icon-holder img {
+      max-width: 62.5%;
+    }
+    .edgtf-iwt-title-holder {
+      margin-bottom: 3px;
+    }
   }
 }
 
@@ -1095,6 +1130,8 @@ iframe.paylocity-iframe {
       background-image: url(/wp-content/themes/conall-child/dist/images/Elevar_Gradient_MOB.png) !important;
     }
     h5 {
+      font-size: 28px;
+      line-height: 45px;
       margin-top: 15px !important;
     }
     p {
@@ -1107,6 +1144,11 @@ iframe.paylocity-iframe {
   .icon-topbox.vc_column_container {
     display: flex;
     padding: 3% 0;
+  }
+  #bottombox1,
+  #bottombox2,
+  #bottombox3 {
+    justify-content: center;
   }
   .icon-bottombox {
       .edgtf-iwt.edgtf-iwt-icon-top {
@@ -1167,10 +1209,6 @@ iframe.paylocity-iframe {
         }
       }
     }
-
-/*    #address-line {
-      width: 60vw;
-    }*/
   }
   #form-container-row {
     padding: 40px 20px !important;
@@ -1237,7 +1275,7 @@ iframe.paylocity-iframe {
   }
   .icon-bottombox {
     div.vc_column-inner {
-    padding: 14%;
+    padding: 12%;
     }
     .edgtf-iwt-icon-holder {
       height: 50%;
@@ -1251,20 +1289,35 @@ iframe.paylocity-iframe {
       margin-top: 30px !important;
     }
   }
+  #our-purpose {
+    .space-95 {
+      height: 60px !important;
+    }     
+  }
   #careers-paylocity-row {
-    h4.eoe-headline,
+    h4.eoe-headline {
+      font-size: 20px;
+      margin-top: 35px;
+    }
     p.eoe-copy {
       font-size: 18px;
+      margin-top: 25px;
     }
     .space-70 {
       display: none;
     }
+    .space-50 {
+      display: none;
+    }
   }
   #grey-background-row {
-    min-height: 80px;
+    min-height: 100px;
   }
   #grey-background-row a {
     font-size: 18px;
+  }
+  div.container-iframe {
+    margin-top: 25px;
   }
 }
 
@@ -1273,10 +1326,11 @@ iframe.paylocity-iframe {
   .page-id-17194 .edgtf-grid-section .edgtf-section-inner {
     width: 350px;
   }
-  /* #mission-statement {
+   #mission-statement {
     padding-top: 30px !important;
     padding-bottom: 0px !important;
   }
+  /*
   #mission-statement,
   #core-values,
   #our-purpose,
@@ -1326,8 +1380,8 @@ iframe.paylocity-iframe {
       margin-top: 15px !important;
     }
     p {
-      font-size: 21px;
-      line-height: 32px;
+      font-size: 18px;
+      line-height: 28px;
       padding: 0;
       margin: 0 auto;
       text-align: center;
@@ -1349,8 +1403,17 @@ iframe.paylocity-iframe {
     }
     h5 {
       font-size: 28px;
-      line-height: 38px;
+      line-height: 32px;
     }
+  }
+  #grey-background-row {
+    min-height: 125px;
+    margin: 0%;
+    margin-top: 20px;
+  }
+  #grey-background-row a {
+    font-size: 18px;
+    text-align: center;
   }
 }
 
